# Algebra_with_Sympy

./: .gitmodules  Demonstration of algebraic_equation.py.ipynb  Demonstration of equation class in a namespace.ipynb  Demonstration of equation class.ipynb  Development Notes.md  ReadMe.md  algebraic_equation.py  algebraic_equation_ex_func_old.py  dotests.sh  pyproject.toml  requirements.txt  setup.py  version.py
Developer Testing/: Algebra Scratch.ipynb  DMO plus SymPy Algebra.ipynb  Display_Math_Operations.py  Equation_OB_ver.py  Importing sympy into global namespace and then extending...ipynb  Test ` importing ... as ...`.ipynb  Testing OB ideas.ipynb  expression made of multiple equations.ipynb  how does is play with solve?.ipynb
algebra_with_sympy/: __init__.py  algebraic_equation.py  preparser.py  version.py
algebra_with_sympy/tests/: algebraic_equation.py  test_algebraic_equation.py
docs/: Demonstration of equation class.html  algebra_with_sympy.html  index.html  intro.md  logo art.odg  search.js
docs/algebra_with_sympy/: __init__.html  algebraic_equation.html  preparser.html  tests.html  version.html
tests/: test_algebraic_equation.py  test_extension_of_sympy_functions.py  test_numerics.py  test_preparser.py
